[package]
name = "blinkenbox"
version = "0.1.0"
edition = "2021"
authors = ["Ronald Weber <ronaldxweber@gmail.com>"]
description = "Blinkenbox ESP32-C3 IO extender"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/rxwb/blinkenbox"

[[bin]]
name = "blinkenbox"
test = false
bench = false

[workspace]

[dependencies]
heapless = "0.8.0"

[dependencies.rtic]
version = "2.1.1"
features = ["riscv-esp32c3-backend"]

[dependencies.rtic-monotonics]
version = "2.0.3"
features = ["esp32c3-systimer"]

[dependencies.rtic-sync]
version= "1.3.0"

[dependencies.esp32c3]
version = "0.27.0"
features = ["critical-section"]

[dependencies.esp-hal]
version = "0.23.1"
features = ["esp32c3"]

[dependencies.esp-backtrace]
version = "0.15.0"
features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
]

[dependencies.esp-println]
version = "0.13.0"
features = ["esp32c3"]

[profile.release]
debug = 2
lto = true
opt-level = 'z'
codegen-units = 1
incremental = false

[patch.crates-io]
rtic =            { git = "https://github.com/rtic-rs/rtic.git", rev = "587f183842fbd7cfe80253cb199032dd76740f70" }
rtic-monotonics = { git = "https://github.com/rtic-rs/rtic.git", rev = "587f183842fbd7cfe80253cb199032dd76740f70" }
